fixed layout issue between registration iframe and google map

--- a/src/documents/styles/style.css.scss
+++ b/src/documents/styles/style.css.scss
@@ -142,7 +142,7 @@
 		@media (min-width: $smallDeviceMin ) {
 
 			.register {
-				height: 20.5rem;
+				height: 13rem;
 			}
 
 		}
